kubernetes/apps/ingress/external-services/frigate.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-frigate
  namespace: ingress
spec:
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-frigate
  namespace: ingress
subsets:
- addresses:
  - ip: "${FRIGATE_ADDRESS}"
  ports:
  - port: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-frigate
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "${INGRESS_INTERNAL_ONLY_CIDR}"
    hajimari.io/enable: "true"
    hajimari.io/appName: "frigate"
    hajimari.io/icon: "mdi:frigate"
    hajimari.io/url: "https://frigate.${EXTERNAL_DNS_1_DOMAIN}"
spec:
  ingressClassName: nginx
  rules:
  - host: "frigate.${EXTERNAL_DNS_1_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-frigate
            port:
              number: 5000
