kubernetes/apps/ingress/external-services/fully-kiosk.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-fully-kiosk
  namespace: ingress
spec:
  ports:
  - protocol: TCP
    port: 2323
    targetPort: 2323
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-fully-kiosk
  namespace: ingress
subsets:
- addresses:
  - ip: 192.168.4.39
  ports:
  - port: 2323
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-fully-kiosk
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "${INGRESS_INTERNAL_ONLY_CIDR}"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    hajimari.io/enable: "true"
    hajimari.io/appName: "Fully Kiosk"
    hajimari.io/icon: "mdi:tablet"
spec:
  ingressClassName: nginx
  rules:
  - host: "kiosk.${EXTERNAL_DNS_1_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-fully-kiosk
            port:
              number: 2323
