kubernetes/apps/ingress/external-services/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-minio
  namespace: ingress
spec:
  ports:
  - protocol: TCP
    port: 9001
    targetPort: 9001
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-minio
  namespace: ingress
subsets:
- addresses:
  - ip: 192.168.10.20
  ports:
  - port: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-minio
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "${ç}"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    hajimari.io/enable: "true"
    hajimari.io/appName: "MinIO"
    hajimari.io/icon: "simple-icons:minio"
spec:
  ingressClassName: nginx
  rules:
  - host: "minio.${EXTERNAL_DNS_1_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-minio
            port:
              number: 9001
