kubernetes/apps/ingress/external-services/octoprint.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-octoprint
  namespace: ingress
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-octoprint
  namespace: ingress
subsets:
- addresses:
  - ip: 192.168.6.161
  ports:
  - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-octoprint
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "${INGRESS_INTERNAL_ONLY_CIDR}"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: "octoprint.${EXTERNAL_DNS_1_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-octoprint
            port:
              number: 80
