kubernetes/apps/ingress/external-services/plex.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-plex
  namespace: ingress
spec:
  ports:
  - protocol: TCP
    port: 32400
    targetPort: 32400
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-plex
  namespace: ingress
subsets:
- addresses:
  - ip: 192.168.8.197
  ports:
  - port: 32400
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-plex
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    hajimari.io/enable: "true"
    hajimari.io/appName: "Plex"
    hajimari.io/icon: "mdi:plex"
    hajimari.io/url: "https://plex.${EXTERNAL_DNS_1_DOMAIN}/web"
spec:
  ingressClassName: nginx
  rules:
  - host: "plex.${EXTERNAL_DNS_1_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-plex
            port:
              number: 32400
