kubernetes/apps/ingress/external-services/wg-easy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-wg-easy
  namespace: ingress
spec:
  ports:
  - protocol: TCP
    port: 51821
    targetPort: 51821
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service-wg-easy
  namespace: ingress
subsets:
- addresses:
  - ip: 192.168.10.10
  ports:
  - port: 51821
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-wg-easy
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "${INGRESS_INTERNAL_ONLY_CIDR}"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "wg.${EXTERNAL_DNS_1_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-service-wg-easy
            port:
              number: 51821
